modified chaincapdevice figure and caption

--- a/body.tex
+++ b/body.tex
@@ -38,7 +38,7 @@ energy-dependent self-energy is mapped to an energy-independent
 in a many-body treatment of the system. Here, we present a continuation of that
 work, applying the method to a chain of atoms with interacting electrons, and
 using a complex \ac{CI} scheme for the calculation of electronic structure.
-Different levels of correlation are explored by varying the threshold
+Different levels of correlation are studied by varying the threshold
 parameter for \acp{CSF} in the \ac{CI} calculation.
 
 The rest of this paper is organized as follows: in section~\ref{sec:method}, we
@@ -55,21 +55,20 @@ section~\ref{sec:conclusions} contains conclusions and further perspectives.
 \subsection{Model System}
 \label{subsec:modelsystem}
 
-The system we studied consists of a simple atomic chain with interatomic
-separation of 0.28 nm, intended to mirror the system studied experimentally
-in~\cite{nilius2002science} (See figure~\ref{fig:chaincapdevice}). Two interatomic
-spacings are made larger than the others, to delineate a ``device'' between two
-leads. This spacing determines the degree to which the device states couple to
-the leads, and variation of the spacing allows us to explore different coupling
-regimes.
+The system ``device'' we shall study consists of a simple atomic chain with
+interatomic separation of 0.28 nm, intended to mirror the system studied
+experimentally in~\cite{nilius2002science} (See
+figure~\ref{fig:chaincapdevice}). Two interatomic spacings are made larger than
+the others, to delineate a ``molecule'' between two leads. This spacing
+determines the degree to which the device states couple to the leads, and
+variation of the spacing allows us to explore different coupling regimes.
 
 \begin{figure}
 	\begin{center}
 		\includegraphics[width=0.9\linewidth]{figures/chaincapdevice}
 	\end{center}
-	\caption{Model system studied in this work. The device consists of 24
-	Gold atoms, while the leads (not fully shown to accentuate the
-	device-lead gaps) consist of 20 atoms each.}
+	\caption{Model system studied in this work. The molecule consists of 20
+	Gold atoms, while the leads consist of 24 atoms each.}
 	\label{fig:chaincapdevice}
 \end{figure}
 
