update abstract with Jim's recommendations for the poster competition

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,7 +1,18 @@
-Using a \acl{CAP} which was tuned specifically to reproduce eigenenergies
-obtained in a single-particle picture using a complex self-energy, we are able
-to model the effect of coupling of a quantum device to semi-infinite leads
-within a \ac{CI} (many-body) formalism. For two different degrees of
-device-lead coupling, the effect of electron correlation on the shifts and
-broadenings of quasiparticle levels is studied by decreasing the threshold for
-inclusion of Configuration State Functions into the \ac{CI} vector.
+As electronics devices scale to sub 10 nanometer lengths, the distinction
+between ``device'' and ``leads'' or ``electrodes'' becomes blurred. Here, the
+interaction between device and leads is studied in a simple model of a
+molecular tunnel junction. Using a complex absorbing potential, we are able to
+reproduce the single-particle energy levels of the device region including a
+description of the effects of the ``semi-infinite'' leads. With this approach,
+we are able to model the effect of coupling of a quantum device to leads and to
+systematically study the effect of many-electron interactions between the
+device and lead regions. Varying the device-lead coupling, the effect of
+electron correlation on energy shifts and lifetimes of electronic states on the
+device region is studied by systematically increasing the electron correlation
+or ``many-electron interactions''. To achieve the treatment of the electronic
+interactions, we apply the method of configuration interaction. We find that
+the prediction of the electronic states of a device region is sensitive to both
+the amount of device-lead coupling and to electron correlation. The two effects
+mix in a complicated way implying that detailed treatments of the electronic
+structure of nanoscale devices are required to predict electronic behaviour
+such as charge transport and photoexcitations in a molecular junction.
