small updates to body.tex

--- a/body.tex
+++ b/body.tex
@@ -55,7 +55,7 @@ section~\ref{sec:conclusions} contains conclusions and further perspectives.
 \subsection{Model System}
 \label{subsec:modelsystem}
 
-The system ``device'' we shall study consists of a simple atomic chain with
+The system (``device'') we shall study consists of a simple atomic chain with
 interatomic separation of 0.28 nm, intended to mirror the system studied
 experimentally in~\cite{nilius2002science} (See
 figure~\ref{fig:chaincapdevice}). Two interatomic spacings are made larger than
@@ -122,9 +122,7 @@ where \umm{\omega} is a diagonal matrix with the complex value $\omega_i$ as
 its $i$th diagonal element.
 
 This projection introduces a small amount of inaccuracy, as will be discussed
-later.
-
-We calculate the transmission through the device region via
+later. We calculate the transmission through the device region via
 
 \begin{equation}
 	T(E) = \mathbf{tr}(\Lambda_L G \Lambda_R G^\dagger)	
